--- a/product9.html
+++ b/product9.html
@@ -171,6 +171,12 @@
                                 J'adore 頂級金緻香精取材自高貴原料，是一款極富感官氣息的香氛，以奢華馥郁的花植香精，奢華演繹經典J'adore花束香氣。
 <br><br>
                                 這些花朵原精，包括來自迪奧專屬格拉斯花田的茉莉和五月玫瑰香精，以及充滿東方情調的香草和晚香玉。格拉斯茉莉閃耀的香氣，略帶果香而馥郁飽滿。五月玫瑰香氣醉人，點綴清新香料氣息，宛如瞬間盛開般迷人嬌媚。香草香氣作為烘托茉莉和玫瑰的基調，沉穩包覆、讓花香更活潑，也散發個性獨具的魅力幽香。純白唯美的晚香玉，賦予香氣繁複完整的結構，展現熱情不墜。
+                            <hr>
+                           調香師絮語
+                           <br><br>
+J'adore 頂級金緻香精是極致卓越的香氛，揉合多種珍貴香精，馥郁醉人。充滿誘惑力量的東方香調，猶如細緻完美的花束，立即展現獨特香氣個性，豐潤而奔放。可以感受到花香的感性氣韻，像是獻給美麗花束的一幅畫。
+<br><br>
+迪奧首席調香師 François Demachy
                             </div>
                         </div>
                     </div>
