--- a/product10.html
+++ b/product10.html
@@ -180,6 +180,17 @@
 透過MISS DIOR玫瑰珍釀香氛，DIOR實踐讓地球之美永續留存。
 <br><br>
 《販售櫃點》DIOR線上旗艦店，及台北 101、 台北京站、忠孝 SOGO、信義新光A8、台中新光三越、高雄漢神巨蛋、新光三越南西店、台南新光三越西門店。</div>
+                        <hr>
+工藝<br><br>
+當春天造訪南法格拉斯，五月玫瑰紛紛綻放，鮮花瀰漫空中的幽香令人陶醉。雨露洗滌了花朵，融入了甜蜜醉人香氣，潺潺匯入格拉斯當地的水源。這座城市的每一座噴泉都如魔法般充滿著芬芳花香，如同一年一度的豐收季節一樣，維繫著這片獨特風土的心跳。帶有香氣的花水就這樣流經石渠，注入城市中歷史悠久的泉水中，香氛噴泉（Scented Fountains）嫣然誕生。
+<br><br>
+時至今日，DIOR為經典MISS DIOR香氛開啟全新篇章。
+<br><br>
+珍稀玫瑰純露傳奇<br>
+珍稀玫瑰純露是格拉斯母女世代傳承的芬芳秘密，每一年採收時節，當地女性從悉心採摘的玫瑰花瓣，蒸餾出珍稀玫瑰花純露，細膩而柔潤的玫瑰氣息，為生活增添無比芬芳。
+<br><br>
+將大自然幻化成香氛
+DIOR與格拉斯馬儂花田獨家合作，將所有收成透過蒸餾，製作出極稀珍貴的格拉斯玫瑰純露，向世界各地的女性分享這個秘密。 每年5月會採收成千上萬朵的格拉斯玫瑰，蒸餾後盡萃珍貴的玫瑰純露盛裝於MISS DIOR玫瑰珍釀香氛。每批玫瑰純露都會因年份、產季、氣候、產量等等而有所不同，這也使得每一瓶MISS DIOR玫瑰珍釀香氛皆極致限量。
                         </div>
                     </div>
                     <div class="accordion-item">
