--- a/product10.html
+++ b/product10.html
@@ -190,7 +190,7 @@
 珍稀玫瑰純露是格拉斯母女世代傳承的芬芳秘密，每一年採收時節，當地女性從悉心採摘的玫瑰花瓣，蒸餾出珍稀玫瑰花純露，細膩而柔潤的玫瑰氣息，為生活增添無比芬芳。
 <br><br>
 將大自然幻化成香氛
-DIOR與格拉斯馬儂花田獨家合作，將所有收成透過蒸餾，製作出極稀珍貴的格拉斯玫瑰純露，向世界各地的女性分享這個秘密。 每年5月會採收成千上萬朵的格拉斯玫瑰，蒸餾後盡萃珍貴的玫瑰純露盛裝於MISS DIOR玫瑰珍釀香氛。每批玫瑰純露都會因年份、產季、氣候、產量等等而有所不同，這也使得每一瓶MISS DIOR玫瑰珍釀香氛皆極致限量。
+DIOR與格拉斯馬儂花田獨家合作，將所有收成透過蒸餾，製作出極稀珍貴的格拉斯玫瑰純露，向世界各地的女性分享這個秘密。 每年5月會採收成千上萬朵的格拉斯玫瑰，蒸餾後盡萃珍貴的玫瑰純露盛裝於MISS DIOR玫瑰珍釀香氛。每批玫瑰純露都會因年份、產季、氣候、產量等等而有所不同，這也使得每一瓶MISS DIOR玫瑰珍釀香氛皆極致限量。</>
                         </div>
                     </div>
                     <div class="accordion-item">
