--- a/product11.html
+++ b/product11.html
@@ -179,7 +179,15 @@
                                 Dior香氛猶如一束優雅且絢麗的花束，繫著無數的花朵和鮮明色彩，散發著千絲萬縷的香氣，呼應著奔放灑脫的特質。帶有蜜糖與胡椒香氣的格拉斯玫瑰，如絲絨般滑順的核心香調。鈴蘭的清新氣息，交織著帶有杏桃香氣的牡丹，以及鳶尾花的香粉質感綴點於其中，最後，以柔和的木質底韻輕輕包裹。
 <br><br>
                                 此次，Miss Dior香氛的頸間繫上全新高訂單耳蝴蝶結，短短數公分的手工緹花緞帶上，織就出宛如印象派點描畫的粉彩花朵，演繹無與倫比的奢華。而瓶身下方，完美鑲崁著經典的Miss
-                                Dior 千鳥格紋圖騰。 </div>
+                                Dior 千鳥格紋圖騰。 
+                            <hr>
+                                工藝<br><br>
+                                如今，迪奧與法國百年的知名緞帶工坊合作，以製作高級訂製服非凡的精湛技藝、純手工打造這繫於瓶身頸部的單耳蝴蝶結，演繹無與倫比的奢華品味。<br><br>
+
+                                每一只Miss
+                                Dior緹花緞帶單耳蝴蝶結，皆堅持使用傳統木製織布機，以396卷絲線（每公分緞帶以12,000條線交織而成）、耗時一個月完成，讓每只蝴蝶結皆有獨一無二的緹花樣式與色澤。
+                                <br><br>
+                                這短短數公分的緞帶所需的創意、工時和專注，精緻手工一如Dior高訂禮服上縫綴的訂製蝴蝶結。</div>
                         </div>
                     </div>
                     <div class="accordion-item">
