--- a/product12.html
+++ b/product12.html
@@ -174,7 +174,13 @@
 <br><br>
                                 頂部鑲崁水晶球般的滾珠，一抹輕柔吻膚，讓迷人的花香之吻繚繞肌膚。精巧優雅瓶身細緻而高雅，瓶內的Miss
                                 Dior香氛，凝聚繁花活力香氣，以格拉斯玫瑰、鈴蘭、牡丹，與鳶尾花等清新花香開啟篇章，最後以柔和的木質包裹，交織出Miss
-                                Dior愛戀宣言，一同喚醒對世界的愛，別錯過身邊一切的美好。</div>
+                                Dior愛戀宣言，一同喚醒對世界的愛，別錯過身邊一切的美好。<hr>
+                            工藝<br><br>
+                            精準用香：無論何時何地，頂端玻璃滾珠都能精確釋放香氣，絕不失手。
+                            <br><br>
+                            絲絨輕吻：撩撥感官的奢華，極致輕盈、質地清新。
+                            <br><br>
+                            旅行適用：20 ml 裝瓶身適合隨身攜帶，旋轉式瓶蓋緊密封存。</div>
                         </div>
                     </div>
                     <div class="accordion-item">
